Added new tests, Fixed SonarQube Issues.